# kunlun-desktop-release

./: .gitignore  .prettierrc.cjs  AppConf.mts  README.md  README_DETAILED.md  index.html  latest.json  mcp-server.md  package.json  project-overview.md  sign_macos.sh  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  test-upload.yml
scripts/: build-sidecar.sh
sidecar-build/: index.js  package-lock.json  package.json
src/: App.vue  Config.ts  main.ts  updater.ts
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/binaries/: install-mcp.bat  install-mcp.sh  mcp-entry.cjs  node
src-tauri/binaries/mcp-modules/: .env  package.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: README.md  api_client.rs  config.rs  manager.rs  message_builder.rs  mod.rs  tool_executor.rs  types.rs
src-tauri/src/cdp/: client.rs  mod.rs  types.rs
src-tauri/src/commands/: ai.rs  auth.rs  cache.rs  cdp.rs  channel_auth.rs  http.rs  image.rs  keyboard.rs  mcp.rs  mod.rs  sse.rs
src-tauri/src/mcp/: README.md  browser.rs  manager.rs  mod.rs  process.rs  protocol.rs  types.rs
src-tauri/src/tray/: mod.rs  tray.rs
src/api/: BaseDto.ts  HttpClient.ts  Path.ts
src/directive/: clearableSelect.ts  clickOutSide.ts  index.ts  trim.ts
src/enums/: enumDict.ts
src/layouts/: index.vue  onlyHeader.vue
src/playwrightMcp/: AuthTokenExtractor.ts  JobSearcher.ts  README.md  SimpleTest.ts  index.ts
src/robot/: config.ts
src/router/: index.ts  routers.ts
src/service/: AddressService.ts  AdminService.ts  AiService.ts  AuthService.ts  FileService.ts  InterviewService.ts  JobService.ts  ResumeService.ts  SystemService.ts  TutoringService.ts  (+1 more)
(+256 files in other folders)
